chore: promote from staging 2c35723
Release-As: 6.78.0